objects/Test_Case__c.object
<CustomObject>
    <fields>
        <fullName>Assignment_Revocation_Date__c</fullName>
        <label>Datum Abtretungswiderruf</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Assignment_Revocation_Link__c</fullName>
        <formula>IF(Form_Hash_2__c != null,IF(Opportunity__r.Account_Id__c = '0010Y00000eCUS9','http://form.verbraucherhilfe24.de/musterklage-001b/' + Form_Hash_2__c,'https://forms.cloudworx.agency/verbraucherrechte24/musterklage-001b/' + Form_Hash_2__c),'muss erstellt werden')</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OLD Abtretungswiderrufslink</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Auto_Follow_up_Count__c</fullName>
        <label>Anzahl Auto-Follow-ups</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Auto_Follow_up_Date__c</fullName>
        <label>Nächstes Auto-Follow-up</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Autostart_Auto_Follow_up_Journeys__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Follow-up Journeys automatisch starten</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BypassProcessBuilder__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BypassProcessBuilder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ConfirmationLink__c</fullName>
        <formula>HYPERLINK($Label.SiteRoot + '/ConfirmMFK?token=' + Token__c,'Link zum Bestätigungslink','_blank')</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Link zum Bestätigungslink</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Confirmation_Date__c</fullName>
        <label>Bestätigungsdatum</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Confirmation_Link__c</fullName>
        <formula>IF(Form_Hash_1__c != null,IF(Opportunity__r.Account_Id__c = '0010Y00000eCUS9','http://form.verbraucherhilfe24.de/musterklage-001/' + Form_Hash_1__c,'https://forms.cloudworx.agency/verbraucherrechte24/musterklage-001/' + Form_Hash_1__c),'muss erstellt werden')</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OLD Bestätigungslink</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Form_Hash_1__c</fullName>
        <label>Form Hash 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Form_Hash_2__c</fullName>
        <label>Form Hash 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LinkAssignmentRevocation__c</fullName>
        <formula>HYPERLINK($Label.SiteRoot + '/Abtretungslink?token=' + Token__c,'Link zum Abtretungslink','_blank')</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Link zum Abtretungslink</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MusterImpID__c</fullName>
        <externalId>true</externalId>
        <label>MusterImpID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_Musterfeststellungsklage_ID__c</fullName>
        <label>Old Musterfeststellungsklage ID</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Old_Opportunity_ID__c</fullName>
        <label>Old Opportunity ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Id__c</fullName>
        <formula>Opportunity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Musterfeststellungsklagen</relationshipLabel>
        <relationshipName>Test_Cases</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Started_Auto_Follow_up_Journey_1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Started Auto-Follow-up Journey 1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Test_Case_Statuses</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Token__c</fullName>
        <label>Web Form Token</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>URL_Abtretungslink__c</fullName>
        <description>URL for E-Mail Templates</description>
        <formula>$Label.SiteRoot + '/Abtretungslink?token=' + Token__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>URL Abtretungslink</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>URL_ConfirmationLink__c</fullName>
        <description>For E-Mail templates</description>
        <formula>$Label.SiteRoot + '/ConfirmMFK?token=' + Token__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>URL Bestätigungslink</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gericht_K__c</fullName>
        <formula>Opportunity__r.Fall__r.GrKunde__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gericht K</label>
        <type>Text</type>
    </fields>
    <label>Musterfeststellungsklage</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Musterfeststellungsklagen</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>